RESOLVED FIXED222809
Regression(r268097): WKWebView.URL is nil in the processDidTerminate delegate
https://bugs.webkit.org/show_bug.cgi?id=222809
Summary Regression(r268097): WKWebView.URL is nil in the processDidTerminate delegate
Chris Dumez
Reported 2021-03-05 10:38:10 PST
WKWebView.URL is nil in the processDidTerminate delegate since r268097.
Attachments
Patch (4.82 KB, patch)
2021-03-05 10:47 PST, Chris Dumez
no flags
Patch (5.45 KB, patch)
2021-03-05 10:58 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-03-05 10:47:39 PST
Michael Catanzaro
Comment 2 2021-03-05 10:55:00 PST
Comment on attachment 422383 [details] Patch Nice test.
Michael Catanzaro
Comment 3 2021-03-05 10:55:29 PST
One style error: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:372: This { should be at the end of the previous line [whitespace/braces] [4]
Chris Dumez
Comment 4 2021-03-05 10:58:43 PST
Chris Dumez
Comment 5 2021-03-05 12:53:53 PST
Comment on attachment 422386 [details] Patch Clearing flags on attachment: 422386 Committed r273997 (234941@main): <https://commits.webkit.org/234941@main>
Chris Dumez
Comment 6 2021-03-05 12:53:56 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2021-03-05 12:54:22 PST
Note You need to log in before you can comment on or make changes to this bug.